--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,11 @@
   <artifactId>ansi-terminal</artifactId>
   <version>0.0.3-SNAPSHOT</version>
 
+  <properties>
+    <junit.engine.version>5.2.0</junit.engine.version>
+    <junit.platform.version>1.2.0</junit.platform.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>ch.rweiss</groupId>
@@ -19,13 +24,13 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.0.2</version>
+      <version>${junit.engine.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
-      <version>1.0.2</version>
+      <version>${junit.platform.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -48,7 +53,20 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.21.0</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>${junit.platform.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
         <configuration>
           <archive>
             <manifestEntries>
