--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.rweiss</groupId>
   <artifactId>ansi-terminal</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
 
   <properties>
     <junit.engine.version>5.2.0</junit.engine.version>
@@ -13,13 +13,13 @@
   <dependencies>
     <dependency>
       <groupId>ch.rweiss</groupId>
-      <artifactId>ansi-terminal-for-windows</artifactId>
-      <version>0.0.3-SNAPSHOT</version>
+      <artifactId>ansi-terminal-native</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>ch.rweiss</groupId>
       <artifactId>check</artifactId>
-      <version>0.0.2-SNAPSHOT</version>
+      <version>0.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
