--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
   <version>0.3.0-SNAPSHOT</version>
 
   <properties>
-    <junit.engine.version>5.2.0</junit.engine.version>
-    <junit.platform.version>1.2.0</junit.platform.version>
+    <junit.engine.version>5.3.1</junit.engine.version>
+    <junit.platform.version>1.3.1</junit.platform.version>
+    <assertj.version>3.11.1</assertj.version>
   </properties>
 
   <dependencies>
@@ -36,7 +37,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.8.0</version>
+      <version>${assertj.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
